--- a/src/main/resources/templates/candidates/one.html
+++ b/src/main/resources/templates/candidates/one.html
@@ -17,45 +17,20 @@
         <div class="container">
             <a class="navbar-brand" href="/">Job4jDreamJob</a>
             <div class="collapse navbar-collapse">
-                <div class="navbar-nav">
+                <div class="navbar-nav me-auto">
                     <a class="nav-item nav-link" href="/">Главная</a>
                     <a class="nav-item nav-link" th:href="@{/vacancies}">Вакансии</a>
                     <a class="nav-item nav-link" th:href="@{/candidates}">Кандидаты</a>
                     <a class="nav-item nav-link" th:href="@{/vacancies/create}">Создать вакансию</a>
                     <a class="nav-item nav-link" th:href="@{/candidates/create}">Создать резюме</a>
                 </div>
+                <div class="d-flex">
+                    <a class="nav-link text-secondary" th:href="@{/users/register}">Регистрация</a>
+                </div>
             </div>
         </div>
     </nav>
     <div class="container">
-<!--        <form class="mt-3" th:action="@{/candidates/update}" method="post" th:object="${candidate}">-->
-<!--            <input type="hidden" name="id" th:field="*{id}">-->
-<!--            <div class="mb-3">-->
-<!--                <label for="name" class="form-label"><b>Название</b></label>-->
-<!--                <input type="text" class="form-control" id="name" name="title" th:field="*{name}" placeholder="Предлагая должность, например, Ведущий Java разработчик">-->
-<!--            </div>-->
-<!--            <div class="mb-3">-->
-<!--                <label for="description" class="form-label"><b>Описание</b></label>-->
-<!--                <textarea class="form-control" id="description" name="description" th:field="*{description}" rows="25" placeholder="Опишите требования к кандидату"></textarea>-->
-<!--            </div>-->
-<!--            <div class="mb-3">-->
-<!--                <label for="city"><b>Город</b></label>-->
-<!--                <select class="form-control" id="city" name="cityId">-->
-<!--                    <option th:each="city : ${cities}" th:value="${city.id}" th:text="${city.name}" th:field="*{cityId}" th:selected="${city.id==cityId}"></option>-->
-<!--                </select>-->
-<!--            </div>-->
-<!--            <div class="mb-3 row">-->
-<!--                <div class="col-6"></div>-->
-<!--                <div class="col-6">-->
-<!--                    <div class="row">-->
-<!--                        <div class="col-4"><a class="btn btn-light w-100" th:href="@{/candidates}">Отмена</a></div>-->
-<!--                        <div class="col-4"><a class="btn btn-danger w-100" th:href="@{/candidates/delete/{id}(id=${candidate.id})}">Удалить</a></div>-->
-<!--                        <div class="col-4"><button class="btn btn-success w-100" type="submit">Обновить</button></div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </form>-->
-
         <form class="mt-3" th:action="@{/candidates/update}" method="post" th:object="${candidate}" enctype="multipart/form-data">
             <input type="hidden" name="id" th:field="*{id}">
             <input type="hidden" name="fileId" th:field="*{fileId}">
