--- a/src/main/resources/templates/errors/404.html
+++ b/src/main/resources/templates/errors/404.html
@@ -24,7 +24,8 @@
           <a class="nav-item nav-link" th:href="@{/vacancies/create}">Создать вакансию</a>
         </div>
         <div class="d-flex">
-          <a class="nav-link text-secondary" th:href="@{/users/register}">Регистрация</a>
+          <a class="nav-link text-secondary me-3" th:href="@{/users/register}">Регистрация</a>
+          <a class="nav-link text-secondary" th:href="@{/users/login}">Войти</a>
         </div>
       </div>
     </div>
