--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 
-    <title>Регистрация пользователя</title>
+    <title>Вход</title>
 </head>
 <body>
 <div class="container-fluid p-0">
@@ -25,37 +25,44 @@
                     <a class="nav-item nav-link" th:href="@{/candidates/create}">Создать резюме</a>
                 </div>
                 <div class="d-flex">
-                    <a class="nav-link text-secondary me-3 active" th:href="@{/users/register}">Регистрация</a>
-                    <a class="nav-link text-secondary" th:href="@{/users/login}">Войти</a>
+                    <a class="nav-link text-secondary me-3" th:href="@{/users/register}">Регистрация</a>
+                    <a class="nav-link text-light" th:href="@{/users/login}">Войти</a>
                 </div>
             </div>
         </div>
     </nav>
     <div class="container">
-        <form class="mt-3" th:action="@{/users/register}" method="post" enctype="multipart/form-data">
-            <div class="mb-3">
-                <label for="name" class="form-label"><b>Имя</b></label>
-                <input type="text" class="form-control" id="name" name="name" placeholder="Иван" required>
-            </div>
-            <div class="mb-3">
-                <label for="email" class="form-label"><b>Почта</b></label>
-                <input type="email" class="form-control" id="email" name="email" placeholder="ivan@mail.ru" required>
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label"><b>Пароль</b></label>
-                <input type="password" class="form-control" id="password" name="password" placeholder="Пароль должен быть не менее 8 символов" required>
-            </div>
-            <div class="mb-3 row">
-                <div class="col-6"></div>
-                <div class="col-6">
-                    <div class="row">
-                        <div class="col-6"><a class="btn btn-danger w-100" th:href="@{/users}">Отмена</a></div>
-                        <div class="col-6"><button class="btn btn-primary w-100" type="submit">Сохранить</button>
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-6">
+                <form class="mt-3" th:action="@{/users/login}" method="post">
+                    <div class="mb-3" th:if="${error}">
+                        <p class="text-danger" th:text="${error}"></p>
+                    </div>
+                    <div class="mb-3">
+                        <label for="email" class="form-label"><b>Почта</b></label>
+                        <input type="email" class="form-control" id="email" name="email" placeholder="ivan@mail.ru" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label"><b>Пароль</b></label>
+                        <input type="password" class="form-control" id="password" name="password" required>
+                    </div>
+                    <div class="mb-3 row">
+                        <div class="col-7">
+                            <p>Не зарегистрированы? <span><a th:href="@{/users/register}">Зарегистрироваться</a></span></p>
+                        </div>
+                        <div class="col-5">
+                            <div class="row">
+                                <div class="col-6"><a class="btn btn-danger w-100" th:href="@{/}">Отмена</a></div>
+                                <div class="col-6"><button class="btn btn-primary w-100" type="submit">Войти</button>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
+                </form>
             </div>
-        </form>
+            <div class="col-3"></div>
+        </div>
     </div>
 </div>
 </body>
